--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <div id="nav">
                 <label for="img">
                 <img src="/image/icons8-menu-26.png" alt=""> 
-                <img src="/image/youtube.png" id="logo" alt="">youtube 
+                <img src="/image/logo.png"id="logo" alt="">
                </label>
 
-            <label for="form">
+            <label id="form">
                 <form action="">
-                <input type="search" placeholder="search">
+                <input type="search" placeholder="search" size="70">
             <button>
                 <img src="/image/icons8-search-26.png" alt="">
             </button>
