main section of the page

--- a/index.html
+++ b/index.html
@@ -33,5 +33,40 @@
         </div>
         </nav>
     </header>
+    <section>
+            <div container>
+        <article>
+            <div id="main" class="video">
+                <div id="embeded">
+                        <iframe width="700" height="450" src="https://www.youtube.com/embed/jeJRIk1hd4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div id="info">
+                    <div id="views">
+                        <label for=""><h4>Work Hard In Silence, Let Success Make The Noise - Study Motivation</h4></label>
+                        <label  id="label"><label for="views">
+                            757,255 Views. 17 sept 2018
+                        </label>
+                    <label for="icons">
+                        <img src="/image/icons8-thumbs-up-26.png" alt=""><span>13 k</span>  
+                        <img src="/image/icons8-thumbs-down-26.png" alt=""><span>56</span>                      </label>
+                </label>
+                    </div>  
+                </div>
+            </div>
+        </article>
+        <!--<aside>
+            <div id="recomend">
+                <div id="side">
+                    <img src="/image/max-nelson-taiuG8CPKAQ-unsplash.jpg" alt=""><label for="cont"><label for="title"></label><br>
+                <label for="description"></label></label>
+                </div>
+                <div id="side"></div>
+                <div id="side"></div>
+                <div id="side"></div>
+                <div id="side"></div>
+            </div>
+        </aside>-->
+    </div>
+    </section>
 </body>
 </html>
