Designed & styled the footer

--- a/index.html
+++ b/index.html
@@ -46,14 +46,29 @@
                         <label  id="label"><label for="views">
                             757,255 Views. 17 sept 2018
                         </label>
-                    <label for="icons">
+                    <label for="icons" id="footer-icons">
+                    
                         <img src="/image/icons8-thumbs-up-26.png" alt=""><span>13 k</span>  
-                        <img src="/image/icons8-thumbs-down-26.png" alt=""><span>56</span>                      </label>
+                        <img src="/image/icons8-thumbs-down-26.png" alt=""><span>56</span> 
+                        <img src="image/icons8-share-3-24.png" alt=""> <span>Share</span>  
+                        <img src="image/icons8-save-search-24.png" alt=""> <span> Save</span>                  </label>
                 </label>
                     </div>  
                 </div>
             </div>
         </article>
+        <div class="footer">
+           <div class="inline">
+             <label class="girl">
+                <img src="image/datagirl.jpg"  width= "10%" alt=""><span id="datagirl">DataGirl <br> 364K subscribers</span>  
+             </label>   
+            <label>
+                <button class="Submit">Subscribe</button>
+            </label>
+           </div>
+            <p>Elon Musk unveiled his brand new SpaceX Starship - designed to make private round-trips to the Moon, Mars and beyond.</p>    
+
+        </div>
         <!--<aside>
             <div id="recomend">
                 <div id="side">
