finished main section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/cce6e1325c.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -26,7 +27,7 @@
         </form>
         </label>
 
-        <label for="icon"><img src="/image/icons8-documentary-26.png" alt="">
+        <label id="left"><img src="/image/icons8-documentary-26.png" alt="">
             <img src="/image/icons8-list-26.png" alt="">
             <img src="/image/icons8-notification-26.png" alt="">
         </label>
@@ -36,6 +37,7 @@
     <section>
             <div container>
         <article>
+            <div class="sub">
             <div id="main" class="video">
                 <div id="embeded">
                         <iframe width="700" height="450" src="https://www.youtube.com/embed/jeJRIk1hd4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -55,20 +57,24 @@
                 </label>
                     </div>  
                 </div>
+                <div class="footer">
+                        <div class="inline">
+                          <label class="girl">
+                             <img src="image/datagirl.jpg"  width= "10%" alt=""><span id="datagirl">DataGirl <br> 364K subscribers</span>  
+                          </label>   
+                         <label>
+                             <button class="Submit">Subscribe</button>
+                         </label>
+                        </div>
+                         <p>Elon Musk unveiled his brand new SpaceX Starship - designed to make private round-trips to the Moon, Mars and beyond.</p>    
+             
+                     </div>
             </div>
-        </article>
-        <div class="footer">
-           <div class="inline">
-             <label class="girl">
-                <img src="image/datagirl.jpg"  width= "10%" alt=""><span id="datagirl">DataGirl <br> 364K subscribers</span>  
-             </label>   
-            <label>
-                <button class="Submit">Subscribe</button>
-            </label>
-           </div>
-            <p>Elon Musk unveiled his brand new SpaceX Starship - designed to make private round-trips to the Moon, Mars and beyond.</p>    
+                <div class="aside">
 
+                </div>
         </div>
+        </article>
         <!--<aside>
             <div id="recomend">
                 <div id="side">
