--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         </nav>
     </header>
     <section>
-            <div container>
+            <div>
         <article>
             <div class="sub">
             <div id="main" class="video">
                 <div id="embeded">
-                        <iframe width="700" height="450" src="https://www.youtube.com/embed/jeJRIk1hd4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="700" height="450" src="https://www.youtube.com/embed/jeJRIk1hd4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div id="info">
                     <div id="views">
-                        <label for=""><h4>Work Hard In Silence, Let Success Make The Noise - Study Motivation</h4></label>
+                        <label for=""><h3>Contributing to Open Source Part I: The Easy Way</h4></label>
                         <label  id="label"><label for="views">
                             757,255 Views. 17 sept 2018
                         </label>
@@ -66,7 +66,18 @@
                              <button class="Submit">Subscribe</button>
                          </label>
                         </div>
-                         <p>Elon Musk unveiled his brand new SpaceX Starship - designed to make private round-trips to the Moon, Mars and beyond.</p>    
+                         <p>Published on Feb 27, 2014 <br>
+                         How do you contribute to open source? In this video,
+                          I'll describe the easiest way to make a simple contribution 
+                          to an open source project -- without using the command line, 
+                          a text editor, "forking a repo", or even touching Git outside of
+                           Github. I'll also describe what kinds of contributions open 
+                           source software projects are typically looking for. 
+                           As an example, I use submitting a student solution to
+                            a web development exercise from The Odin Project, 
+                            a free online curriculum for learning web development 
+                            with Ruby on Rails. You can find more information about 
+                            that project at http://theodinproject.com..</p>    
              
                      </div>
             </div>
