added the asides

--- a/index.html
+++ b/index.html
@@ -82,22 +82,19 @@
                      </div>
             </div>
                 <div class="aside">
+                    <div>
+                        <img src="image/Capture.PNG" alt="first">
+                    </div>
+                    <div>
+                        <img src="image/Capture1.PNG" alt="first">
+                    </div>
+                    <div>
+                        <img src="image/Capture2.PNG" alt="first">
+                    </div>
 
                 </div>
         </div>
         </article>
-        <!--<aside>
-            <div id="recomend">
-                <div id="side">
-                    <img src="/image/max-nelson-taiuG8CPKAQ-unsplash.jpg" alt=""><label for="cont"><label for="title"></label><br>
-                <label for="description"></label></label>
-                </div>
-                <div id="side"></div>
-                <div id="side"></div>
-                <div id="side"></div>
-                <div id="side"></div>
-            </div>
-        </aside>-->
     </div>
     </section>
 </body>
