adjusted main section

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         </nav>
     </header>
     <section>
-            <div>
+            <div class="pupra">
         <article>
             <div class="sub">
             <div id="main" class="video">
                 <div id="embeded">
-                    <iframe width="700" height="450" src="https://www.youtube.com/embed/jeJRIk1hd4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="650" height="450" src="https://www.youtube.com/embed/jeJRIk1hd4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div id="info">
                     <div id="views">
