styled the buttons

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                             a web development exercise from The Odin Project, 
                             a free online curriculum for learning web development 
                             with Ruby on Rails. You can find more information about 
-                            that project at http://theodinproject.com..</p>    
+                            that project at http://theodinproject.com..</p>  
+                            <button id="show-more">SHOW MORE</button>  
              
                      </div>
             </div>
