--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
     <title>
         youtube home page
@@ -13,19 +13,17 @@
     <header>
         <nav>
             <div id="nav">
-                <label for="img">
+                <label>
                 <img src="/image/icons8-menu-26.png" alt="menu"> 
-                <img src="/image/logo.png"id="logo" alt="logo">
+                <img src="/image/logo.png" id="logo" alt="logo">
                </label>
 
-            <label id="form">
-                <form action="">
+                <form>
                 <input type="search" placeholder="Search" size="70">
             <button>
                 <img src="/image/icons8-search-26.png" alt="search">
             </button>
         </form>
-        </label>
 
         <label id="left"><img src="/image/icons8-documentary-26.png" alt="video">
             <img src="/image/icons8-list-26.png" alt="list">
@@ -40,26 +38,24 @@
             <div class="sub">
             <div id="main" class="video">
                 <div id="embeded">
-                    <iframe width="650" height="450" src="https://www.youtube.com/embed/jeJRIk1hd4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="650" height="450" src="https://www.youtube.com/embed/jeJRIk1hd4E" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div id="info">
                     <div id="views">
-                        <label for=""><h3>Contributing to Open Source Part I: The Easy Way</h4></label>  
+                        <h3>Contributing to Open Source Part I: The Easy Way</h3>  
                 </div>
                 <div class="footer">
                         <div class="inline">
                           <label class="girl">
-                             <img src="/image/download.jpg" height="50%" alt="logo">
+                             <img src="/image/download.jpg" height="50" alt="logo">
                           </label>
-                         <label class="down">
-                                <p> <str> Elon Musk Motivation</str></p><button class="Submit">Subscribe</button>            
-                         </label>
+                                <p class="down"> <strong> Elon Musk Motivation</strong></p><button class="Submit">Subscribe <span id="num">100</span></button>            
                         </div>
-                        </label>
                         </div>
-                        <div style ="max-height: 35px"><label for="" id="num-views"> <h3> 50,016 Views</h3> </label></div>
+                        <div style ="max-height: 35px"><h3 id="num-views"> 50,016 Views</h3>
+                        </div>
                         <div class="buttons">
-                           <button><img src="image/add (1).png" alt="add">Add to</button> 
+                           <button><img src="image/add1.png" alt="add">Add to</button> 
                            <button><img src="image/share.png" alt="share">Share</button> 
                            <button><img src="image/ellipsis.png" alt="more">More</button>
                            <span class="likes">
