--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
         </nav>
     </header>
     <section>
+        <h1>welcome</h1>
             <div class="pupra">
         <article>
             <div class="sub">
             <div id="main" class="video">
                 <div id="embeded">
-                    <iframe width="650" height="450" src="https://www.youtube.com/embed/jeJRIk1hd4E" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/jeJRIk1hd4E" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div id="info">
                     <div id="views">
@@ -47,12 +48,12 @@
                 <div class="footer">
                         <div class="inline">
                           <label class="girl">
-                             <img src="/image/download.jpg" height="50" alt="logo">
+                             <img src="/image/download.jpg" id="log" alt="logo">
                           </label>
                                 <p class="down"> <strong> Elon Musk Motivation</strong></p><button class="Submit">Subscribe <span id="num">100</span></button>            
                         </div>
                         </div>
-                        <div style ="max-height: 35px"><h3 id="num-views"> 50,016 Views</h3>
+                        <div id="sel"><h3 id="num-views"> 50,016 Views</h3>
                         </div>
                         <div class="buttons">
                            <button><img src="image/add1.png" alt="add">Add to</button> 
