changed images path

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         <nav>
             <div id="nav">
                 <label>
-                <img src="/image/icons8-menu-26.png" alt="menu"> 
-                <img src="/image/logo.png" id="logo" alt="logo">
+                <img src="./image/icons8-menu-26.png" alt="menu"> 
+                <img src="./image/logo.png" id="logo" alt="logo">
                </label>
 
                 <form>
                 <input type="search" placeholder="Search" size="70">
             <button>
-                <img src="/image/icons8-search-26.png" alt="search">
+                <img src="./image/icons8-search-26.png" alt="search">
             </button>
         </form>
 
-        <label id="left"><img src="/image/icons8-documentary-26.png" alt="video">
-            <img src="/image/icons8-list-26.png" alt="list">
-            <img src="/image/icons8-notification-26.png" alt="notif">
+        <label id="left"><img src="./image/icons8-documentary-26.png" alt="video">
+            <img src="./image/icons8-list-26.png" alt="list">
+            <img src="./image/icons8-notification-26.png" alt="notif">
         </label>
         </div>
         </nav>
@@ -48,7 +48,7 @@
                 <div class="footer">
                         <div class="inline">
                           <label class="girl">
-                             <img src="/image/download.jpg" id="log" alt="logo">
+                             <img src="./image/download.jpg" id="log" alt="logo">
                           </label>
                                 <p class="down"> <strong> Elon Musk Motivation</strong></p><button class="Submit">Subscribe <span id="num">100</span></button>            
                         </div>
@@ -56,12 +56,12 @@
                         <div id="sel"><h3 id="num-views"> 50,016 Views</h3>
                         </div>
                         <div class="buttons">
-                           <button><img src="image/add1.png" alt="add">Add to</button> 
-                           <button><img src="image/share.png" alt="share">Share</button> 
-                           <button><img src="image/ellipsis.png" alt="more">More</button>
+                           <button><img src="./image/add1.png" alt="add">Add to</button> 
+                           <button><img src="./image/icons8-share-3-24.png" alt="share">Share</button> 
+                           <button><img src="./image/ellipsis.png" alt="more">More</button>
                            <span class="likes">
-                            <button><img src="image/icons8-thumbs-up-26.png" alt="like">359</button>  
-                            <button><img src="image/icons8-thumbs-down-26.png" alt="dislike">14</button>
+                            <button><img src="./image/icons8-thumbs-up-26.png" alt="like">359</button>  
+                            <button><img src="./image/icons8-thumbs-down-26.png" alt="dislike">14</button>
                            </span>
                         </div>
                         <div>
@@ -86,16 +86,16 @@
             </div>
                 <div class="aside">
                     <div>
-                        <img src="image/Capture.PNG" alt="first">
+                        <img src="./image/Capture.PNG" alt="first">
                     </div>
                     <div>
-                        <img src="image/Capture1.PNG" alt="second">
+                        <img src="./image/Capture1.PNG" alt="second">
                     </div>
                     <div>
-                        <img src="image/Capture2.PNG" alt="third">
+                        <img src="./image/Capture2.PNG" alt="third">
                     </div>
                     <div>
-                       <img src="image/Capture1.PNG" alt="fourth">
+                       <img src="./image/Capture1.PNG" alt="fourth">
                     </div>
 
                 </div>
