changed the side videos

--- a/index.html
+++ b/index.html
@@ -86,17 +86,23 @@
             </div>
                 <div class="aside">
                     <div>
-                        <img src="./image/Capture.PNG" alt="first">
+                        <img src="./image/tub1.webp" alt="first"><p id="title">Simple dining using Html and css <br> <br> <span>microverse <br> 10K views</span></p>
                     </div>
                     <div>
-                        <img src="./image/Capture1.PNG" alt="second">
+                        <img src="./image/tub2.webp" alt="second"><p id="title">Self driving car with electric power <br> <br> <span>testa <br> 17K views</span></p>
                     </div>
                     <div>
-                        <img src="./image/Capture2.PNG" alt="third">
+                        <img src="./image/tub3.webp" alt="third"><p id="title">Best computer for programing in 2019<br> <br> <span> samsnung <br> 117K views</span></p>
                     </div>
                     <div>
-                       <img src="./image/Capture1.PNG" alt="fourth">
+                       <img src="./image/tub4.webp" alt="fourth"><p id="title">Multi interface phone made by google<br> <br><span>google <br> 207K views</span></p>
                     </div>
+                    <div>
+                        <img src="./image/tub5.webp" alt="fourth"><p id="title">Bryan tracy explaining how git flow works<br> <br> <span> beryab <br> 107K views</span></p>
+                     </div>
+                     <div>
+                        <img src="./image/tub6.webp" alt="fourth"><p id="title">Best operating system in 2019<br> <br> <span> Linux <br> 107K views</span></p>
+                     </div>
 
                 </div>
         </div>
